--- a/jobs/templates/home.html
+++ b/jobs/templates/home.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Home Page</h1>
-</body>
-</html>
+<h2>All jobs</h2>
+{% for job in jobs.all%}
+    <h1>{{job.description}}</h1>
+{% endfor%}
